# annoy

./: CMakeLists.txt
examples/: cmli_test.cpp  del.out  dxnat  fuck.out  index_size_test  index_size_test.out  nat  nat-d.out  nat.out  new_annoy_test.cpp  precision_test  raw_annoy_index_size_test.cpp  raw_annoy_test.cpp  read_h5  read_hdf5.cpp  test  test.out  test_annoy.sh  test_dp.sh  test_index_size.sh  test_script.out  x_annoy_correctness_test.cpp  x_annoy_del_performance_test.cpp  x_annoy_performance_test.cpp  xnat
examples/nat.dSYM/Contents/Resources/DWARF/: nat
examples/test_results/: test_annoy.sh
examples/test_results/correctness_verify/: init_index.out  load_index.out  xnat_correctness.out  xnat_delete.out
examples/test_results/del_performance/: del0p.out  del10p.out  del15p.out  del20p.out  del25p.out  del30p.out  del35p.out  del40p.out  del45p.out  del50p.out  del55p.out  del5p.out  del60p.out  del65p.out  del70p.out  del75p.out  del80p.out  del85p.out  del90p.out  del95p.out  del_0p.out  del_10p.out  del_15p.out  del_20p.out  del_25p.out  del_30p.out  del_35p.out  del_40p.out  del_45p.out  del_5p.out  show_ans.sh
examples/test_results/index_size_test/: index_nt1.out  index_nt128.out  index_nt16.out  index_nt2.out  index_nt256.out  index_nt32.out  index_nt4.out  index_nt64.out  index_nt8.out
examples/test_results/nt1_sk100_tk1/: raw_performance_q100.out  raw_performance_q1000.out  raw_performance_q10000.out  x_annoy_performance_q100.out  x_annoy_performance_q1000.out  x_annoy_performance_q10000.out
src/: annoylib.h  iannoylib.h  xannoylib.h
(+19 files in other folders)
